--- a/templates/index.html
+++ b/templates/index.html
@@ -6,66 +6,34 @@
 <div>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-3">Deep animation</h1>
-        <p class="lead">This is a deep web site, about artificial intelligence technology and animation.</p>
+        <h1 class="display-3">Deep Guess</h1>
+        <p class="lead">This is a deep web site.We using the deepest thinking to guess the best future.</p>
       </div>
     </div>
 
 
-   <div class="container" >
+   <div class="container">
        <h3>最新发表</h3>
 
-          <div class="row" style="background: #e9ecef; padding: 10px 5px 10px 5px;margin-top: 10px">
-              <div>
+        {% for i in range(5)%}
+
+          <div class="row" style="background: white; box-shadow: 3px 3px #bfbfbf; border: 1px solid #656161; border-radius:7px; padding: 10px 5px 10px 0px;margin-top: 15px;">
+              <div class="col-xs-12 col-sm-12 col-md-3">
                 <a href="#" class="thumbnail" style="padding-right: 20px ">
                   <img src="{{ static_url('img/s.jpg') }}" alt="...">
                 </a>
               </div>
-              <div>
-                  <h3>ajfsilaksd'ads</h3>
-                  <p>asfasfjkals;dka'sld'asd</p>
+              <div class="col-xs-12 col-sm-12 col-md-9">
+                  <a href="#" style="color: #2d2d2d">
+                  <h3 style="margin-top: 10px;">深入理解LSTM</h3>
+                  <p style="margin-top: 10px;">长短期记忆（Long Short-Term Memory, LSTM）是一种时间递归神经网络(RNN)[1]，论文首次发表于1997年。由于独特的设计结构，LSTM适合于处理和预测时间序列中间隔和延迟非常长的重要事件。</p>
+                  </a>
+                  <div style="float: right"><span class="badge badge-info">Update at 2017/11/17 22:45</span></div>
               </div>
           </div>
 
-       <div class="row" style="background: #e9ecef; padding: 10px 5px 10px 5px;margin-top: 10px">
-              <div>
-                <a href="#" class="thumbnail" style="padding-right: 20px ">
-                  <img src="{{ static_url('img/s.jpg') }}" alt="...">
-                </a>
-              </div>
-              <div>
-                  <h3>ajfsilaksd'ads</h3>
-                  <p>asfasfjkals;dka'sld'asd</p>
-              </div>
-          </div>
+       {% end %}
 
-       <div class="row" style="background: #e9ecef; padding: 10px 5px 10px 5px;margin-top: 10px">
-              <div>
-                <a href="#" class="thumbnail" style="padding-right: 20px ">
-                  <img src="{{ static_url('img/s.jpg') }}" alt="...">
-                </a>
-              </div>
-              <div>
-                  <h3>ajfsilaksd'ads</h3>
-                  <p>asfasfjkals;dka'sld'asd</p>
-              </div>
-          </div>
-
-
-       <div class="row" style="background: #e9ecef; padding: 10px 5px 10px 5px;margin-top: 10px">
-              <div>
-                <a href="#" class="thumbnail" style="padding-right: 20px ">
-                  <img src="{{ static_url('img/s.jpg') }}" alt="...">
-                </a>
-              </div>
-              <div>
-                  <h3>ajfsilaksd'ads</h3>
-                  <p>asfasfjkals;dka'sld'asd</p>
-              </div>
-          </div>
-      </div>
-
-      </div>
 
 
 
