--- a/templates/console/main.html
+++ b/templates/console/main.html
@@ -12,9 +12,9 @@
     <div class="layui-logo"><a href="/" style="color: #009688">DeepGuess.info</a></div>
     <!-- 头部区域（可配合layui已有的水平导航） -->
     <ul class="layui-nav layui-layout-left">
-      <li class="layui-nav-item"><a href="">个人中心</a></li>
-      <li class="layui-nav-item"><a href="">联系站长</a></li>
-      <li class="layui-nav-item"><button class="layui-btn">查看消息<span class="layui-badge layui-bg-gray">1</span></button></li>
+      <li class="layui-nav-item"><a href="#">个人中心</a></li>
+      <li class="layui-nav-item"><a href="#">联系站长</a></li>
+      <li class="layui-nav-item" ><a href="/article/create">写文章</a></li>
     </ul>
     <ul class="layui-nav layui-layout-right">
       <li class="layui-nav-item">
